# basic-tool-chat

./: README.md  main.py  pyproject.toml  requirements.txt
chatbot/: __init__.py  bot.py  config.py
tools/: __init__.py  base.py  registry.py
tools/available/: __init__.py  calculator.py  datetime_tool.py  file_operations.py
utils/: __init__.py  formatting.py  validators.py
